<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.telemed</groupId>
    <artifactId>telemedicine-soa</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>module-commun</module>
        <module>module-soap</module>
        <module>module-rest</module>
    </modules>

    <properties>
        <java.version>1.8</java.version> <!-- Changez à 9 si vous utilisez Java 9+ -->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jaxws-api.version>2.3.1</jaxws-api.version>
        <javax.jws-api.version>1.1</javax.jws-api.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- JAX-WS API -->
            <dependency>
                <groupId>javax.jws</groupId>
                <artifactId>javax.jws-api</artifactId>
                <version>${javax.jws-api.version}</version>
            </dependency>
            <!-- JAX-WS Implementation -->
            <dependency>
                <groupId>javax.xml.ws</groupId>
                <artifactId>jaxws-api</artifactId>
                <version>${jaxws-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Plugin Maven pour compiler avec Java -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <!-- Ajouter ceci uniquement pour Java 9+ -->
                        <compilerArgs>
                            <arg>--add-modules</arg>
                            <arg>java.xml.ws</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
